cmake_minimum_required(VERSION 3.28)
project(oj)

set(CMAKE_CXX_STANDARD 17)

add_executable(hot100_1 leetcode/hot100/hot100_1.cpp)

add_executable(hot100_283 leetcode/hot100/hot100_283.cpp)

add_executable(202_happy_number leetcode/202_happy_number.cpp)

add_executable(26_removeDuplicates leetcode/26_removeDuplicates.cpp)

add_executable(hot100_160 leetcode/hot100/hot100_160.cpp)

add_executable(hot100_206 leetcode/hot100/hot100_206.cpp)

add_executable(hot100_234 leetcode/hot100/hot100_234.cpp)

add_executable(hot100_141 leetcode/hot100/hot100_141.cpp)

add_executable(hot100_21 leetcode/hot100/hot100_21.cpp)

add_executable(hot100_35 leetcode/hot100/hot100_35.cpp)

add_executable(69_happy_number leetcode/69_Sqrt_x.cpp)

add_executable(hot100_20 leetcode/hot100/hot100_20.cpp)

add_executable(496_nextGreaterElement leetcode/496_nextGreaterElement.cpp)

add_executable(hot100_94 leetcode/hot100/hot100_94.cpp)

add_executable(hot100_104 leetcode/hot100/hot100_104.cpp)

add_executable(hot100_226 leetcode/hot100/hot100_226.cpp)

add_executable(hot100_101 leetcode/hot100/hot100_101.cpp)

add_executable(hot100_543 leetcode/hot100/hot100_543.cpp)

add_executable(hot100_108 leetcode/hot100/hot100_108.cpp)

add_executable(hot100_121 leetcode/hot100/hot100_121.cpp)

add_executable(409_longestPalindrome leetcode/409_longestPalindrome.cpp)

add_executable(455_findContentChildren leetcode/455_findContentChildren.cpp)

add_executable(hot100_70 leetcode/hot100/hot100_70.cpp)

add_executable(hot100_118 leetcode/hot100/hot100_118.cpp)

add_executable(hot100_136 leetcode/hot100/hot100_136.cpp)

add_executable(hot100_169 leetcode/hot100/hot100_169.cpp)

add_executable(hot100_49 leetcode/hot100/hot100_49.cpp)

add_executable(hot100_128 leetcode/hot100/hot100_128.cpp)

add_executable(hot100_3 leetcode/hot100/hot100_3.cpp)

add_executable(hot100_11 leetcode/hot100/hot100_11.cpp)

add_executable(hot100_15 leetcode/hot100/hot100_15.cpp)

add_executable(27_removeElement leetcode/27_removeElement.cpp)

add_executable(hot100_438 leetcode/hot100/hot100_438.cpp)

add_executable(219_containsNearbyDuplicate leetcode/219_containsNearbyDuplicate.cpp)

add_executable(209_minSubArrayLen leetcode/209_minSubArrayLen.cpp)

add_executable(28_strStr leetcode/28_strStr.cpp)

add_executable(hot100_189 leetcode/hot100/hot100_189.cpp)

add_executable(hot100_560 leetcode/hot100/hot100_560.cpp)

add_executable(724_pivotIndex leetcode/724_pivotIndex.cpp)

add_executable(1413_minStartValue leetcode/1413_minStartValue.cpp)

add_executable(hot100_238 leetcode/hot100/hot100_238.cpp)

add_executable(hot100_53 leetcode/hot100/hot100_53.cpp)

add_executable(hot100_56 leetcode/hot100/hot100_56.cpp)

add_executable(hot100_73 leetcode/hot100/hot100_73.cpp)

add_executable(hot100_54 leetcode/hot100/hot100_54.cpp)

add_executable(hot100_48 leetcode/hot100/hot100_48.cpp)

add_executable(hot100_240 leetcode/hot100/hot100_240.cpp)

add_executable(59_generateMatrix leetcode/59_generateMatrix.cpp)

add_executable(74_searchMatrix leetcode/74_searchMatrix.cpp)

add_executable(hot100_142 leetcode/hot100/hot100_142.cpp)

add_executable(hot100_2 leetcode/hot100/hot100_2.cpp)

add_executable(hot100_19 leetcode/hot100/hot100_19.cpp)

add_executable(hot100_24 leetcode/hot100/hot100_24.cpp)

add_executable(hot100_138 leetcode/hot100/hot100_138.cpp)

add_executable(hot100_148 leetcode/hot100/hot100_148.cpp)

add_executable(912_sortArray leetcode/912_sortArray.cpp)

add_executable(hot100_102 leetcode/hot100/hot100_102.cpp)