cmake_minimum_required(VERSION 3.28)
project(oj)

set(CMAKE_CXX_STANDARD 17)

include_directories(head)

add_executable(hot100_1 leetcode/hot100/hot100_1.cpp)

add_executable(hot100_283 leetcode/hot100/hot100_283.cpp)

add_executable(202_happy_number leetcode/202_happy_number.cpp)

add_executable(26_removeDuplicates leetcode/26_removeDuplicates.cpp)

add_executable(hot100_160 leetcode/hot100/hot100_160.cpp)

add_executable(hot100_206 leetcode/hot100/hot100_206.cpp)

add_executable(hot100_234 leetcode/hot100/hot100_234.cpp)

add_executable(hot100_141 leetcode/hot100/hot100_141.cpp)

add_executable(hot100_21 leetcode/hot100/hot100_21.cpp)

add_executable(hot100_35 leetcode/hot100/hot100_35.cpp)

add_executable(69_happy_number leetcode/69_Sqrt_x.cpp)

add_executable(hot100_20 leetcode/hot100/hot100_20.cpp)

add_executable(496_nextGreaterElement leetcode/496_nextGreaterElement.cpp)

add_executable(hot100_94 leetcode/hot100/hot100_94.cpp)

add_executable(hot100_104 leetcode/hot100/hot100_104.cpp)

add_executable(hot100_226 leetcode/hot100/hot100_226.cpp)

add_executable(hot100_101 leetcode/hot100/hot100_101.cpp)

add_executable(hot100_543 leetcode/hot100/hot100_543.cpp)

add_executable(hot100_108 leetcode/hot100/hot100_108.cpp)

add_executable(hot100_121 leetcode/hot100/hot100_121.cpp)

add_executable(409_longestPalindrome leetcode/409_longestPalindrome.cpp)

add_executable(455_findContentChildren leetcode/455_findContentChildren.cpp)

add_executable(hot100_70 leetcode/hot100/hot100_70.cpp)

add_executable(hot100_118 leetcode/hot100/hot100_118.cpp)

add_executable(hot100_136 leetcode/hot100/hot100_136.cpp)

add_executable(hot100_169 leetcode/hot100/hot100_169.cpp)

add_executable(hot100_49 leetcode/hot100/hot100_49.cpp)

add_executable(hot100_128 leetcode/hot100/hot100_128.cpp)

add_executable(hot100_3 leetcode/hot100/hot100_3.cpp)

add_executable(hot100_11 leetcode/hot100/hot100_11.cpp)

add_executable(hot100_15 leetcode/hot100/hot100_15.cpp)

add_executable(27_removeElement leetcode/27_removeElement.cpp)

add_executable(hot100_438 leetcode/hot100/hot100_438.cpp)

add_executable(219_containsNearbyDuplicate leetcode/219_containsNearbyDuplicate.cpp)

add_executable(209_minSubArrayLen leetcode/209_minSubArrayLen.cpp)

add_executable(28_strStr leetcode/28_strStr.cpp)

add_executable(hot100_189 leetcode/hot100/hot100_189.cpp)

add_executable(hot100_560 leetcode/hot100/hot100_560.cpp)

add_executable(724_pivotIndex leetcode/724_pivotIndex.cpp)

add_executable(1413_minStartValue leetcode/1413_minStartValue.cpp)

add_executable(hot100_238 leetcode/hot100/hot100_238.cpp)

add_executable(hot100_53 leetcode/hot100/hot100_53.cpp)

add_executable(hot100_56 leetcode/hot100/hot100_56.cpp)

add_executable(hot100_73 leetcode/hot100/hot100_73.cpp)

add_executable(hot100_54 leetcode/hot100/hot100_54.cpp)

add_executable(hot100_48 leetcode/hot100/hot100_48.cpp)

add_executable(hot100_240 leetcode/hot100/hot100_240.cpp)

add_executable(59_generateMatrix leetcode/59_generateMatrix.cpp)

add_executable(74_searchMatrix leetcode/hot100/hot100_74.cpp)

add_executable(hot100_142 leetcode/hot100/hot100_142.cpp)

add_executable(hot100_2 leetcode/hot100/hot100_2.cpp head/ListNode.h)

add_executable(hot100_19 leetcode/hot100/hot100_19.cpp)

add_executable(hot100_24 leetcode/hot100/hot100_24.cpp)

add_executable(hot100_138 leetcode/hot100/hot100_138.cpp)

add_executable(hot100_148 leetcode/hot100/hot100_148.cpp)

add_executable(912_sortArray leetcode/912_sortArray.cpp)

add_executable(hot100_102 leetcode/hot100/hot100_102.cpp)

add_executable(hot100_98 leetcode/hot100/hot100_98.cpp)

add_executable(hot100_230 leetcode/hot100/hot100_230.cpp)

add_executable(hot100_199 leetcode/hot100/hot100_199.cpp)

add_executable(hot100_114 leetcode/hot100/hot100_114.cpp)

add_executable(hot100_105 leetcode/hot100/hot100_105.cpp)

add_executable(hot100_437 leetcode/hot100/hot100_437.cpp)

add_executable(hot100_236 leetcode/hot100/hot100_236.cpp)

add_executable(100_isSameTree leetcode/100_isSameTree.cpp)

add_executable(99_recoverTree leetcode/99_recoverTree.cpp)

add_executable(110_isBalanced leetcode/110_isBalanced.cpp)

add_executable(111_minDepth leetcode/111_minDepth.cpp)

add_executable(112_hasPathSum leetcode/112_hasPathSum.cpp head/TreeNode.h)

add_executable(113_pathSum leetcode/113_pathSum.cpp head/TreeNode.h)

add_executable(hot100_200 leetcode/hot100/hot100_200.cpp)

add_executable(hot100_994 leetcode/hot100/hot100_994.cpp)

add_executable(hot100_207 leetcode/hot100/hot100_207.cpp)

add_executable(210_findOrder leetcode/210_findOrder.cpp)

add_executable(hot100_46 leetcode/hot100/hot100_46.cpp)

add_executable(hot100_78 leetcode/hot100/hot100_78.cpp)

add_executable(hot100_17 leetcode/hot100/hot100_17.cpp)

add_executable(hot100_39 leetcode/hot100/hot100_39.cpp)

add_executable(hot100_22 leetcode/hot100/hot100_22.cpp)

add_executable(hot100_79 leetcode/hot100/hot100_79.cpp)

add_executable(hot100_131 leetcode/hot100/hot100_131.cpp)

add_executable(40_combinationSum2 leetcode/40_combinationSum2.cpp)

add_executable(hot100_34 leetcode/hot100/hot100_34.cpp)

add_executable(hot100_33 leetcode/hot100/hot100_33.cpp)

add_executable(hot100_153 leetcode/hot100/hot100_153.cpp)

add_executable(hot100_394 leetcode/hot100/hot100_394.cpp)

add_executable(hot100_739 leetcode/hot100/hot100_739.cpp)

add_executable(71_simplifyPath leetcode/71_simplifyPath.cpp)

add_executable(hot100_215 leetcode/hot100/hot100_215.cpp)

add_executable(hot100_347 leetcode/hot100/hot100_347.cpp)

add_executable(264_nthUglyNumber leetcode/264_nthUglyNumber.cpp)

add_executable(hot100_55 leetcode/hot100/hot100_55.cpp)

add_executable(hot100_45 leetcode/hot100/hot100_45.cpp)

add_executable(hot100_763 leetcode/hot100/hot100_763.cpp)

add_executable(122_maxProfit leetcode/122_maxProfit.cpp)

add_executable(134_canCompleteCircuit leetcode/134_canCompleteCircuit.cpp)

add_executable(179_largestNumber leetcode/179_largestNumber.cpp)

add_executable(hot100_198 leetcode/hot100/hot100_198.cpp)

add_executable(hot100_279 leetcode/hot100/hot100_279.cpp)

add_executable(hot100_322 leetcode/hot100/hot100_322.cpp)

add_executable(hot1000_139 leetcode/hot100/hot100_139.cpp)

add_executable(hot100_300 leetcode/hot100/hot100_300.cpp)

add_executable(hot100_152 leetcode/hot100/hot100_152.cpp)

add_executable(hot100_146 leetcode/hot100/hot100_146.cpp)

add_executable(hot100_62 leetcode/hot100/hot100_62.cpp)

add_executable(hot100_64 leetcode/hot100/hot100_64.cpp)

add_executable(hot100_5 leetcode/hot100/hot100_5.cpp)

add_executable(hot100_1143 leetcode/hot100/hot100_1143.cpp)

add_executable(hot100_72 leetcode/hot100/hot100_72.cpp)

add_executable(hot100_32 leetcode/hot100/hot100_32.cpp)

add_executable(hot100_75 leetcode/hot100/hot100_75.cpp)

add_executable(hot100_31 leetcode/hot100/hot100_31.cpp)

add_executable(hot100_287 leetcode/hot100/hot100_287.cpp)

add_executable(hot100_42 leetcode/hot100/hot100_42.cpp)

add_executable(hot100_239 leetcode/hot100/hot100_239.cpp)

add_executable(hot100_76 leetcode/hot100/hot100_76.cpp)

add_executable(hot100_41 leetcode/hot100/hot100_41.cpp)

add_executable(hot100_25 leetcode/hot100/hot100_25.cpp)

add_executable(hot100_23 leetcode/hot100/hot100_23.cpp)

add_executable(hot100_124 leetcode/hot100/hot100_124.cpp)

add_executable(hot100_51 leetcode/hot100/hot100_51.cpp)

add_executable(hot100_84 leetcode/hot100/hot100_84.cpp)

add_executable(hot100_4 leetcode/hot100/hot100_4.cpp)